--- a/index.html
+++ b/index.html
@@ -183,15 +183,20 @@
         </div>
       </div>
 
-      <!-- Quick Links -->
+      <!-- Partnership & Investment -->
       <div class="footer-section">
-        <h4>Quick Links</h4>
-        <ul class="footer-links">
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="mailto:sukailin1124@gmail.com">Contact</a></li>
-        </ul>
+        <h4>Partnership & Investment</h4>
+        <p class="partnership-intro">Interested in shaping the future of creative technology? We're seeking strategic partners and investors who share our vision.</p>
+        <div class="partnership-features">
+          <div class="partnership-item">
+            <span class="partnership-icon">📊</span>
+            <span class="partnership-text">Seed funding opportunities available</span>
+          </div>
+          <div class="partnership-item">
+            <span class="partnership-icon">🤝</span>
+            <span class="partnership-text">Strategic partnerships welcome</span>
+          </div>
+        </div>
       </div>
 
     </div>
