--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <div class="footer-section">
         <h4>Get In Touch</h4>
         <div class="footer-contact">
-          <p><span class="contact-icon">📍</span> 1300 Elmwood Ave, Buffalo, NY 14222</p>
+          <p><span class="contact-icon">📍</span> 1330 Avenue of the Americas, Suite 23A, New York, NY 10019, United States</p>
           <p><span class="contact-icon">✉️</span> <a href="mailto:sukailin1124@gmail.com">sukailin1124@gmail.com</a></p>
           <p><span class="contact-icon">💼</span> <a href="https://www.linkedin.com/company/ellez-llc" target="_blank">LinkedIn: ELLEZ LLC</a></p>
         </div>
