--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
           <h3>Jeito</h3>
           <p>A next-gen social platform focused on privacy, authenticity, and creative freedom. Jeito is a community-first network — no algorithmic pressure, no AI exploitation. Just real connection.</p>
         </div>
+          <div class="project-card fade-in-card">
+            <h3><a href="https://taiwanstock.online" target="_blank" rel="noopener">taiwanstock.online</a></h3>
+            <p>Focused investment platform for Taiwan’s capital market. Unified dashboards, watchlists, calculators, and guided content in a clean, responsive dark UI. Built with native ES modules, Cloudflare edge, and one-click Excel/PDF exports.</p>
+          </div>
       </div>
     </div>
   </section>
