--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
           <p>A next-gen social platform focused on privacy, authenticity, and creative freedom. Jeito is a community-first network — no algorithmic pressure, no AI exploitation. Just real connection.</p>
         </div>
           <div class="project-card fade-in-card">
-            <h3><a href="https://taiwanstock.online" target="_blank" rel="noopener">taiwanstock.online</a></h3>
+            <h3>taiwanstock.online</h3>
             <p>Focused investment platform for Taiwan’s capital market. Unified dashboards, watchlists, calculators, and guided content in a clean, responsive dark UI. Built with native ES modules, Cloudflare edge, and one-click Excel/PDF exports.</p>
+            <p><a href="https://taiwanstock.online" target="_blank" rel="noopener">Visit Website</a></p>
           </div>
       </div>
     </div>
