--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
           <div class="project-card fade-in-card">
             <h3>taiwanstock.online</h3>
-            <p>Focused investment platform for Taiwan’s capital market. Unified dashboards, watchlists, calculators, and guided content in a clean, responsive dark UI. Built with native ES modules, Cloudflare edge, and one-click Excel/PDF exports.</p>
+            <p>Focused investment platform for Taiwan's capital market. Unified dashboards, watchlists, calculators, and guided content in a clean, responsive dark UI. Built with native ES modules, Cloudflare edge, and one-click Excel/PDF exports.</p>
             <p><a href="https://taiwanstock.online" target="_blank" rel="noopener">Visit Website</a></p>
           </div>
       </div>
