--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
           <h3>Jeito</h3>
           <p>A next-gen social platform focused on privacy, authenticity, and creative freedom. Jeito is a community-first network — no algorithmic pressure, no AI exploitation. Just real connection.</p>
         </div>
+        <div class="project-card fade-in-card">
+          <h3>What to Eat (機會命運餐 v2.2)</h3>
+          <p>An intelligent random restaurant discovery app for iOS. Features location-based search, random selection wheel, favorites, and food diary with multiple subscription tiers. Perfect for solving "choice paralysis" in dining decisions.</p>
+          <p><a href="apps/what-to-eat/index.html">Learn More</a> | <a href="https://apps.apple.com/app/what-to-eat" target="_blank" rel="noopener">Download on App Store</a></p>
+        </div>
           <div class="project-card fade-in-card">
             <h3>taiwanstock.online</h3>
             <p>Focused investment platform for Taiwan's capital market. Unified dashboards, watchlists, calculators, and guided content in a clean, responsive dark UI. Built with native ES modules, Cloudflare edge, and one-click Excel/PDF exports.</p>
@@ -166,6 +171,13 @@
           <p>Privacy-first social platform built for authentic connection. No algorithms, no exploitation—just genuine community and creative freedom.</p>
           <span class="product-status">🔬 Research Phase</span>
         </div>
+        
+        <div class="product-showcase fade-in-card">
+          <div class="product-icon">WE</div>
+          <h3><a href="apps/what-to-eat/index.html" style="color: inherit; text-decoration: none;">What to Eat</a></h3>
+          <p>Smart random restaurant discovery app with location search, favorites, and food diary. Subscription-based model with Free, No-Ads, and Pro tiers for iOS.</p>
+          <span class="product-status">📱 Live on App Store</span>
+        </div>
       </div>
     </div>
 
@@ -183,7 +195,7 @@
         <h4>Get In Touch</h4>
         <div class="footer-contact">
           <p><span class="contact-icon">📍</span> 1330 Avenue of the Americas, Suite 23A, New York, NY 10019, United States</p>
-          <p><span class="contact-icon">✉️</span> <a href="mailto:sukailin1124@gmail.com">sukailin1124@gmail.com</a></p>
+          <p><span class="contact-icon">✉️</span> <a href="mailto:ellez.tech.2023@gmail.com">ellez.tech.2023@gmail.com</a></p>
           <p><span class="contact-icon">💼</span> <a href="https://www.linkedin.com/company/ellez-llc" target="_blank">LinkedIn: ELLEZ LLC</a></p>
         </div>
       </div>
