Add Stall POS product page and homepage product entry

--- a/index.html
+++ b/index.html
@@ -178,6 +178,13 @@
           <p>Smart random restaurant discovery app with location search, favorites, and food diary. Subscription-based model with Free, No-Ads, and Pro tiers for iOS.</p>
           <span class="product-status">📱 Live on App Store</span>
         </div>
+
+        <div class="product-showcase fade-in-card">
+          <div class="product-icon">SP</div>
+          <h3><a href="apps/Stall＿pos/index.html" style="color: inherit; text-decoration: none;">Stall POS – Creator Checkout</a></h3>
+          <p>Offline-first checkout and inventory for creators and market vendors. Fast checkout, local-only data, and tablet-optimized interface—no account or network required.</p>
+          <span class="product-status">🛍️ Offline-first · Coming Soon</span>
+        </div>
       </div>
     </div>
 
