Homepage: add Stall POS to 'What We're Building Now' projects

--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@
           <p>An intelligent random restaurant discovery app for iOS. Features location-based search, random selection wheel, favorites, and food diary with multiple subscription tiers. Perfect for solving "choice paralysis" in dining decisions.</p>
           <p><a href="apps/what-to-eat/index.html">Learn More</a> | <a href="https://apps.apple.com/app/what-to-eat" target="_blank" rel="noopener">Download on App Store</a></p>
         </div>
+        <div class="project-card fade-in-card">
+          <h3>Stall POS – Creator Checkout</h3>
+          <p>Offline-first checkout and inventory for creators and market vendors. Fast checkout, large touch targets, and local-only data storage—designed for pop-up markets and tablet use.</p>
+          <p><a href="apps/Stall＿pos/index.html">Learn More</a></p>
+        </div>
           <div class="project-card fade-in-card">
             <h3>taiwanstock.online</h3>
             <p>Focused investment platform for Taiwan's capital market. Unified dashboards, watchlists, calculators, and guided content in a clean, responsive dark UI. Built with native ES modules, Cloudflare edge, and one-click Excel/PDF exports.</p>
