--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
           <p><a href="apps/what-to-eat/index.html">Learn More</a> | <a href="https://apps.apple.com/app/what-to-eat" target="_blank" rel="noopener">Download on App Store</a></p>
         </div>
         <div class="project-card fade-in-card" data-project="stall-pos">
-          <h3>Stall POS – Creator Checkout</h3>
+          <h3>Stall POS - Creator Checkout</h3>
           <p>Offline-first checkout and inventory for creators and market vendors. Fast checkout, large touch targets, and local-only data storage—designed for pop-up markets and tablet use.</p>
-          <p><a href="apps/Stall＿pos/zh/index.html">搶先體驗 Stall POS</a></p>
+          <p><a href="apps/Stall_pos/zh/index.html">搶先體驗 Stall POS</a></p>
         </div>
           <div class="project-card fade-in-card">
             <h3>taiwanstock.online</h3>
@@ -186,7 +186,7 @@
 
         <div class="product-showcase fade-in-card">
           <div class="product-icon">SP</div>
-          <h3><a href="apps/Stall＿pos/zh/index.html" style="color: inherit; text-decoration: none;">Stall POS – Creator Checkout</a></h3>
+          <h3><a href="apps/Stall_pos/zh/index.html" style="color: inherit; text-decoration: none;">Stall POS – Creator Checkout</a></h3>
           <p>Offline-first checkout and inventory for creators and market vendors. Fast checkout, local-only data, and tablet-optimized interface—no account or network required.</p>
           <span class="product-status">🛍️ Offline-first · Coming Soon</span>
         </div>
