--- a/apps/what-to-eat/index.html
+++ b/apps/what-to-eat/index.html
@@ -59,7 +59,7 @@
             <button data-lang="en" role="tab" aria-selected="false">EN</button>
           </div>
 
-          <a class="btn btn-primary" href="https://apps.apple.com/app/what-to-eat" target="_blank" rel="noopener">
+          <a class="btn btn-primary" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank" rel="noopener">
             📱 App Store 下載
           </a>
         </nav>
@@ -87,7 +87,7 @@
         </div>
 
         <div class="hero-ctas">
-          <a class="btn btn-primary" href="https://apps.apple.com/app/what-to-eat" target="_blank" rel="noopener">📱 立即下載</a>
+          <a class="btn btn-primary" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank" rel="noopener">📱 立即下載</a>
           <a class="btn btn-ghost" href="./privacy.html">🔒 查看隱私政策</a>
           <a class="btn btn-ghost" href="./terms.html">📋 使用條款</a>
         </div>
@@ -227,7 +227,7 @@
               <li>候選上限 10 間</li><li>快取 TTL 30 分</li><li>基本篩選</li><li>顯示廣告</li>
               <li>基本收藏</li><li>基本美食日記</li>
             </ul>
-            <a class="btn btn-ghost" href="https://apps.apple.com/app/what-to-eat" target="_blank">免費下載</a>
+            <a class="btn btn-ghost" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank">免費下載</a>
           </div>
 
           <div class="plan">
@@ -237,7 +237,7 @@
             <ul class="plan-features">
               <li>含 Free 全部功能</li><li>移除廣告</li><li>更流暢體驗</li><li>支持開發</li>
             </ul>
-            <a class="btn btn-primary" href="https://apps.apple.com/app/what-to-eat" target="_blank">購買去廣告</a>
+            <a class="btn btn-primary" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank">購買去廣告</a>
           </div>
 
           <div class="plan recommended">
@@ -250,8 +250,8 @@
               <li>無廣告</li><li>進階收藏</li><li>日記統計</li><li>匯出/匯入</li><li>優先客服</li>
             </ul>
             <div class="mt-3">
-              <a class="btn btn-primary" href="https://apps.apple.com/app/what-to-eat" target="_blank">年訂 $24.99</a>
-              <a class="btn btn-ghost mt-1" href="https://apps.apple.com/app/what-to-eat" target="_blank">月訂 $3.99</a>
+              <a class="btn btn-primary" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank">年訂 $24.99</a>
+              <a class="btn btn-ghost mt-1" href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank">月訂 $3.99</a>
             </div>
           </div>
         </div>
