Add copyright footer to Stall POS privacy & terms pages

--- a/apps/Stall_pos/zh/terms.html
+++ b/apps/Stall_pos/zh/terms.html
@@ -83,6 +83,8 @@
                 <a href="index.html" class="btn-secondary">返回首頁</a>
                 <a href="privacy.html" class="btn-secondary">隱私權政策</a>
             </div>
+            <!-- 新增版權宣告 -->
+            <p class="copyright-note">© 2025 ELLEZ LLC. 本頁內容及軟體相關資料之著作權均屬 ELLEZ LLC 所有。All rights reserved.</p>
         </article>
     </main>
 
