Update Stall POS launch time and add localization

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="project-card fade-in-card">
           <h3>What to Eat (機會命運餐 v2.2)</h3>
           <p>An intelligent random restaurant discovery app for iOS. Features location-based search, random selection wheel, favorites, and food diary with multiple subscription tiers. Perfect for solving "choice paralysis" in dining decisions.</p>
-          <p><a href="apps/what-to-eat/index.html">Learn More</a> | <a href="https://apps.apple.com/app/what-to-eat" target="_blank" rel="noopener">Download on App Store</a></p>
+          <p><a href="apps/what-to-eat/index.html">Learn More</a> | <a href="https://apps.apple.com/tw/app/%E6%A9%9F%E6%9C%83%E5%91%BD%E9%81%8B%E9%A4%90/id6752467498" target="_blank" rel="noopener">Download on App Store</a></p>
         </div>
         <div class="project-card fade-in-card" data-project="stall-pos">
           <h3>Stall POS - Creator Checkout</h3>
