--- a/apps/Stall_pos/zh/index.html
+++ b/apps/Stall_pos/zh/index.html
@@ -113,7 +113,7 @@
                 <!-- 金 - 買斷版 -->
                 <div class="pricing-card gold">
                     <div class="pricing-icon">
-                        <img src="../images/金icon.png" alt="金 - 買斷版">
+                        <img src="../images/gold_icon.png" alt="金 - 買斷版">
                     </div>
                     <h3>《金》買斷版</h3>
                     <p class="pricing-type">平板專用・終身授權</p>
@@ -149,7 +149,7 @@
                 <!-- 円 - 訂閱版 -->
                 <div class="pricing-card yen">
                     <div class="pricing-icon">
-                        <img src="../images/円icon.JPG" alt="円 - 訂閱版">
+                        <img src="../images/yen_icon.JPG" alt="円 - 訂閱版">
                     </div>
                     <h3>《円》月訂閱</h3>
                     <p class="pricing-type">平板專用・彈性訂閱</p>
