Fix pricing icon 404: use absolute paths and add fallbacks

--- a/apps/Stall_pos/en/index.html
+++ b/apps/Stall_pos/en/index.html
@@ -113,7 +113,7 @@
                 <!-- Gold - One-Time -->
                 <div class="pricing-card gold">
                     <div class="pricing-icon">
-                        <img src="../images/gold_icon.png" alt="Gold - One-Time">
+                        <img src="/apps/Stall_pos/images/gold_icon.png" alt="Gold - One-Time" onerror="this.replaceWith('🟡');">
                     </div>
                     <h3>"Gold" One-Time</h3>
                     <p class="pricing-type">iPad Only · Lifetime License</p>
@@ -146,7 +146,7 @@
                 <!-- Yen - Subscription -->
                 <div class="pricing-card yen">
                     <div class="pricing-icon">
-                        <img src="../images/yen_icon.JPG" alt="Yen - Subscription">
+                        <img src="/apps/Stall_pos/images/yen_icon.JPG" alt="Yen - Subscription" onerror="this.replaceWith('💱');">
                     </div>
                     <h3>"Yen" Subscription</h3>
                     <p class="pricing-type">iPad Only · Flexible Subscription</p>
