--- a/apps/Stall_pos/ja/index.html
+++ b/apps/Stall_pos/ja/index.html
@@ -113,7 +113,7 @@
                 <!-- 金 - 買斷版 -->
                 <div class="pricing-card gold">
                     <div class="pricing-icon">
-                        <img src="../images/gold_icon.png" alt="金 - 買い切り版">
+                        <img src="/apps/Stall_pos/images/gold_icon.png" alt="金 - 買い切り版" onerror="this.replaceWith('🟡');">
                     </div>
                     <h3>《金》買い切り版</h3>
                     <p class="pricing-type">タブレット専用・永久ライセンス</p>
@@ -146,7 +146,7 @@
                 <!-- 円 - 訂閱版 -->
                 <div class="pricing-card yen">
                     <div class="pricing-icon">
-                        <img src="../images/yen_icon.JPG" alt="円 - サブスクリプション版">
+                        <img src="/apps/Stall_pos/images/yen_icon.JPG" alt="円 - サブスクリプション版" onerror="this.replaceWith('💱');">
                     </div>
                     <h3>《円》月額サブスクリプション</h3>
                     <p class="pricing-type">タブレット専用・柔軟なサブスクリプション</p>
