feat(stall-pos): use absolute stylesheet path with version for cache busting

--- a/apps/Stall_pos/ja/index.html
+++ b/apps/Stall_pos/ja/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Stall POS – クリエイター向けレジシステム</title>
     <meta name="description" content="Stall POS クリエイター向けレジシステム：マーケットや展示会のために設計されたオフラインレジ＆在庫管理ツール。" />
-    <link rel="stylesheet" href="../style.css" />
+    <!-- 絶対パス + バージョン付与でキャッシュとパスずれを防止 -->
+    <link rel="stylesheet" href="/apps/Stall_pos/style.css?v=20251130" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body class="dark-theme">
