feat(stall-pos): add support pages and links

--- a/apps/Stall_pos/en/index.html
+++ b/apps/Stall_pos/en/index.html
@@ -236,6 +236,7 @@
             <div class="legal-links">
                 <a href="privacy.html"><span>Privacy Policy</span></a>
                 <a href="terms.html"><span>Terms of Service</span></a>
+                <a href="support.html"><span>Support</span></a>
             </div>
         </section>
     </main>
