--- a/apps/Stall_pos/ja/index.html
+++ b/apps/Stall_pos/ja/index.html
@@ -236,6 +236,7 @@
             <div class="legal-links">
                 <a href="privacy.html"><span>プライバシーポリシー</span></a>
                 <a href="terms.html"><span>利用規約</span></a>
+                <a href="support.html"><span>サポート</span></a>
             </div>
         </section>
     </main>
