--- a/apps/Stall_pos/zh/index.html
+++ b/apps/Stall_pos/zh/index.html
@@ -241,6 +241,7 @@
             <div class="legal-links">
                 <a href="privacy.html"><span>隱私權政策</span></a>
                 <a href="terms.html"><span>使用者條款</span></a>
+                <a href="support.html"><span>支援服務</span></a>
             </div>
         </section>
     </main>
