feat: add favicon using company logo and fix index.html title

--- a/apps/Stall_pos/en/support.html
+++ b/apps/Stall_pos/en/support.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Support - Stall POS</title>
     <meta name="description" content="Stall POS Support: FAQ and Contact Information." />
+    <link rel="icon" href="/LOGO-.png" type="image/png">
     <!-- Use absolute path + version query to avoid path resolution & stale cache -->
     <link rel="stylesheet" href="/apps/Stall_pos/style.css?v=20251130" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
