--- a/apps/Stall_pos/zh/index.html
+++ b/apps/Stall_pos/zh/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Stall POS – 創作者收銀系統</title>
     <meta name="description" content="Stall POS 創作者收銀系統：專為市集、展會設計的離線收銀與庫存管理工具。" />
+    <link rel="icon" href="/LOGO-.png" type="image/png">
     <!-- 使用絕對路徑與版本號避免部署環境相對路徑解析與快取問題 -->
     <link rel="stylesheet" href="/apps/Stall_pos/style.css?v=20251130" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
