--- a/index.html
+++ b/index.html
@@ -3,21 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ELLEZ LLC - Where T      <!-- Partnership & Investment -->
-      <div class="footer-section">
-        <h4>Partnership & Investment</h4>
-        <p class="partnership-intro">Interested in shaping the future of creative technology? We're seeking strategic partners and investors who share our vision.</p>
-        <div class="partnership-features">
-          <div class="partnership-item">
-            <span class="partnership-icon">📊</span>
-            <span class="partnership-text">Seed funding opportunities available</span>
-          </div>
-          <div class="partnership-item">
-            <span class="partnership-icon">🤝</span>
-            <span class="partnership-text">Strategic partnerships welcome</span>
-          </div>
-        </div>
-      </div>Meets Emotion</title>
+  <title>ELLEZ LLC - Where Technology Meets Emotion</title>
+  <link rel="icon" href="/LOGO-.png" type="image/png">
   <meta name="description" content="ELLEZ LLC is a cross-disciplinary studio bridging design, AI, and human experience. We create meaningful digital products that combine beauty and functionality.">
   
   <!-- Material Icons -->
