feat: add favicon to all remaining pages (legal, 404, what-to-eat)

--- a/apps/Stall_pos/ja/privacy.html
+++ b/apps/Stall_pos/ja/privacy.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>プライバシーポリシー - Stall POS</title>
     <meta name="description" content="Stall POS プライバシーポリシー：データの保護方法について。" />
+    <link rel="icon" href="/LOGO-.png" type="image/png">
     <link rel="stylesheet" href="../style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
