--- a/apps/Stall_pos/zh/privacy.html
+++ b/apps/Stall_pos/zh/privacy.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>隱私權政策 - Stall POS</title>
     <meta name="description" content="Stall POS 隱私權政策：了解我們如何保護您的資料安全。" />
+    <link rel="icon" href="/LOGO-.png" type="image/png">
     <link rel="stylesheet" href="../style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
