--- a/apps/Stall_pos/zh/terms.html
+++ b/apps/Stall_pos/zh/terms.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>使用者條款 - Stall POS</title>
     <meta name="description" content="Stall POS 使用者條款：了解使用規範與權利義務。" />
+    <link rel="icon" href="/LOGO-.png" type="image/png">
     <link rel="stylesheet" href="../style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
