--- a/apps/what-to-eat/index.html
+++ b/apps/what-to-eat/index.html
@@ -9,7 +9,7 @@
 
   <!-- 連到同資料夾的 CSS；加上版本參數避免快取 -->
   <link rel="stylesheet" href="./style.css?v=3.0" />
-  <link rel="icon" href="../../LOGO-.png" />
+  <link rel="icon" href="/LOGO-.png" type="image/png" />
 
   <!-- OG -->
   <meta property="og:title" content="機會命運餐 v2.2｜What to Eat - ELLEZ LLC">
