--- a/apps/Stall_pos/en/privacy.html
+++ b/apps/Stall_pos/en/privacy.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Privacy Policy - Stall POS</title>
     <meta name="description" content="Stall POS Privacy Policy: Learn how we protect your data security." />
+    <link rel="icon" href="/LOGO-.png" type="image/png">
     <link rel="stylesheet" href="../style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
