--- a/apps/Stall_pos/en/terms.html
+++ b/apps/Stall_pos/en/terms.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Terms of Use - Stall POS</title>
     <meta name="description" content="Stall POS Terms of Use: Understand usage rules and rights." />
+    <link rel="icon" href="/LOGO-.png" type="image/png">
     <link rel="stylesheet" href="../style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
