fix: update favicon path to relative and add cache buster

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ELLEZ LLC - Where Technology Meets Emotion</title>
-  <link rel="icon" href="/LOGO-.png" type="image/png">
+  <link rel="icon" href="LOGO-.png?v=1" type="image/png">
   <meta name="description" content="ELLEZ LLC is a cross-disciplinary studio bridging design, AI, and human experience. We create meaningful digital products that combine beauty and functionality.">
   
   <!-- Material Icons -->
