feat(stall-pos): add App Store buttons per pricing card (gold & yen) with localized text

--- a/apps/Stall_pos/en/index.html
+++ b/apps/Stall_pos/en/index.html
@@ -143,6 +143,7 @@
                             <span class="usd">$79.99 USD</span>
                         </div>
                     </div>
+                    <a class="btn-primary" href="https://apps.apple.com/us/app/stall-pos-%E5%89%B5%E4%BD%9C%E8%80%85%E6%94%B6%E9%8A%80%E7%B3%BB%E7%B5%B1-tablet%E7%94%A8%E5%A5%BD%E7%94%A8%E6%BB%BF/id6754980700" target="_blank" rel="noopener">Get on the App Store (One-time)</a>
                 </div>
 
                 <!-- Yen - Subscription -->
@@ -168,6 +169,7 @@
                             <span class="usd">$9.99 USD</span>
                         </div>
                     </div>
+                    <a class="btn-primary" href="https://apps.apple.com/us/app/stall-pos-%E5%89%B5%E4%BD%9C%E8%80%85%E6%94%B6%E9%8A%80%E7%B3%BB%E7%B5%B1/id6754892904" target="_blank" rel="noopener">Download on the App Store (Subscription)</a>
                 </div>
             </div>
             <p class="pricing-note">* App Store prices may vary by exchange rate. Actual price is based on USD.</p>
