--- a/apps/Stall_pos/zh/index.html
+++ b/apps/Stall_pos/zh/index.html
@@ -146,6 +146,7 @@
                             <span class="twd">NT$ 2,480</span>
                         </div>
                     </div>
+                    <a class="btn-primary" href="https://apps.apple.com/us/app/stall-pos-%E5%89%B5%E4%BD%9C%E8%80%85%E6%94%B6%E9%8A%80%E7%B3%BB%E7%B5%B1-tablet%E7%94%A8%E5%A5%BD%E7%94%A8%E6%BB%BF/id6754980700" target="_blank" rel="noopener">前往 App Store（買斷版）</a>
                 </div>
 
                 <!-- 円 - 訂閱版 -->
@@ -173,6 +174,7 @@
                             <span class="twd">NT$ 320</span>
                         </div>
                     </div>
+                    <a class="btn-primary" href="https://apps.apple.com/us/app/stall-pos-%E5%89%B5%E4%BD%9C%E8%80%85%E6%94%B6%E9%8A%80%E7%B3%BB%E7%B5%B1/id6754892904" target="_blank" rel="noopener">前往 App Store（月訂閱）</a>
                 </div>
             </div>
             <p class="pricing-note">* 因 App Store 價格可能隨匯率浮動，實際金額以當下美金計價為主。</p>
