--- a/apps/Stall_pos/ja/index.html
+++ b/apps/Stall_pos/ja/index.html
@@ -143,6 +143,7 @@
                             <span class="usd">$79.99 USD</span>
                         </div>
                     </div>
+                    <a class="btn-primary" href="https://apps.apple.com/us/app/stall-pos-%E5%89%B5%E4%BD%9C%E8%80%85%E6%94%B6%E9%8A%80%E7%B3%BB%E7%B5%B1-tablet%E7%94%A8%E5%A5%BD%E7%94%A8%E6%BB%BF/id6754980700" target="_blank" rel="noopener">App Storeで入手（買い切り）</a>
                 </div>
 
                 <!-- 円 - 訂閱版 -->
@@ -168,6 +169,7 @@
                             <span class="usd">$9.99 USD</span>
                         </div>
                     </div>
+                    <a class="btn-primary" href="https://apps.apple.com/us/app/stall-pos-%E5%89%B5%E4%BD%9C%E8%80%85%E6%94%B6%E9%8A%80%E7%B3%BB%E7%B5%B1/id6754892904" target="_blank" rel="noopener">App Storeでダウンロード（サブスク）</a>
                 </div>
             </div>
             <p class="pricing-note">* App Storeの価格は為替レートにより変動する可能性があるため、実際の金額はその時点の米ドル価格に準じます。</p>
