Update terms with full product names and replace countdown with download buttons

--- a/apps/Stall_pos/en/terms.html
+++ b/apps/Stall_pos/en/terms.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Terms of Use - Stall POS</title>
-    <meta name="description" content="Stall POS Terms of Use: Understand usage rules and rights." />
+    <title>Terms of Use - Stall POS-Creator Checkout</title>
+    <meta name="description" content="Stall POS-Creator Checkout Terms of Use: Understand usage rules and rights." />
     <link rel="icon" href="/LOGO-.png" type="image/png">
     <link rel="stylesheet" href="../style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
 
             <section>
                 <h2>Acceptance of Terms</h2>
-                <p>By using the Stall POS application (hereinafter referred to as "the App"), you agree to the following terms. If you do not agree to these terms, please do not use the App.</p>
+                <p>By using Stall POS-Creator Checkout (hereinafter referred to as "the App"), you agree to the following terms. If you do not agree to these terms, please do not use the App.</p>
             </section>
 
             <section>
