--- a/apps/Stall_pos/ja/terms.html
+++ b/apps/Stall_pos/ja/terms.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>利用規約 - Stall POS</title>
-    <meta name="description" content="Stall POS 利用規約：利用規約と権利義務について。" />
+    <title>利用規約 - Stall POS — クリエイター向けレジシステム</title>
+    <meta name="description" content="Stall POS — クリエイター向けレジシステム 利用規約：利用規約と権利義務について。" />
     <link rel="icon" href="/LOGO-.png" type="image/png">
     <link rel="stylesheet" href="../style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
 
             <section>
                 <h2>規約の同意</h2>
-                <p>Stall POSアプリケーション（以下「本アプリ」）を使用することで、以下の規約に同意したことになります。これらの規約に同意しない場合は、本アプリを使用しないでください。</p>
+                <p>Stall POS — クリエイター向けレジシステム（以下「本アプリ」）を使用することで、以下の規約に同意したことになります。これらの規約に同意しない場合は、本アプリを使用しないでください。</p>
             </section>
 
             <section>
