--- a/apps/Stall_pos/zh/terms.html
+++ b/apps/Stall_pos/zh/terms.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>使用者條款 - Stall POS</title>
-    <meta name="description" content="Stall POS 使用者條款：了解使用規範與權利義務。" />
+    <title>使用者條款 - Stall POS 創作者收銀系統</title>
+    <meta name="description" content="Stall POS 創作者收銀系統 使用者條款：了解使用規範與權利義務。" />
     <link rel="icon" href="/LOGO-.png" type="image/png">
     <link rel="stylesheet" href="../style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
 
             <section>
                 <h2>接受條款</h2>
-                <p>使用 Stall POS 應用程式（以下簡稱「本應用程式」）代表您同意以下條款。如果您不同意這些條款，請勿使用本應用程式。</p>
+                <p>使用 Stall POS 創作者收銀系統（以下簡稱「本應用程式」）代表您同意以下條款。如果您不同意這些條款，請勿使用本應用程式。</p>
             </section>
 
             <section>
