Fix layout issues in EN and JA index pages

--- a/apps/Stall_pos/en/index.html
+++ b/apps/Stall_pos/en/index.html
@@ -23,6 +23,23 @@
             <option value="../ja/index.html">日本語</option>
         </select>
     </div>
+    <div class="theme-switch">
+        <button onclick="toggleTheme()" class="theme-toggle">
+            <div class="theme-icon dark">
+                <div class="moon"></div>
+                <div class="stars"></div>
+                <div class="clouds"></div>
+            </div>
+            <div class="theme-icon light">
+                <div class="sun"></div>
+                <div class="clouds"></div>
+            </div>
+        </button>
+    </div>
+    <main class="container">
+        <section class="hero ornament-box ornament--tr">
+            <img src="../images/icon.JPG" alt="Stall POS Icon" class="app-icon">
+            <h1>Stall POS-Creator Checkout</h1>
             <p class="hero-subtitle">
                 Simple and reliable system built for creators. No internet required at the market.
                 <br>Easy to use, focused on speed, making your event run smoothly.
