--- a/apps/Stall_pos/ja/index.html
+++ b/apps/Stall_pos/ja/index.html
@@ -23,6 +23,23 @@
             <option value="../ja/index.html" selected>日本語</option>
         </select>
     </div>
+    <div class="theme-switch">
+        <button onclick="toggleTheme()" class="theme-toggle">
+            <div class="theme-icon dark">
+                <div class="moon"></div>
+                <div class="stars"></div>
+                <div class="clouds"></div>
+            </div>
+            <div class="theme-icon light">
+                <div class="sun"></div>
+                <div class="clouds"></div>
+            </div>
+        </button>
+    </div>
+    <main class="container">
+        <section class="hero ornament-box ornament--tr">
+            <img src="../images/icon.JPG" alt="Stall POS Icon" class="app-icon">
+            <h1>Stall POS — クリエイター向けレジシステム</h1>
             <p class="hero-subtitle">
                 タブレット向けのオフラインレジシステム。インターネット不要で、市場でも安心して利用できます。
                 <br>使いやすさと速度にフォーカスし、あなたの出店をサポートします。
