security: Replace leaked Firebase API key with new secure key

--- a/public/post.html
+++ b/public/post.html
@@ -39,13 +39,13 @@
   <script type="module">
     // Public Firebase web config (safe to expose)
     const firebaseConfig = {
-      apiKey: "AIzaSyCYi-6vZqsSsI6X1hhXHcABR--MlD3-mTY",
+      apiKey: "AIzaSyBH-fFCxGVXIKN0QB1FPHwyUKYQrbDt4qA",
       authDomain: "ellez-site.firebaseapp.com",
       projectId: "ellez-site",
       storageBucket: "ellez-site.firebasestorage.app",
       messagingSenderId: "161384067066",
-      appId: "1:161384067066:web:22fd7fa7e6d6dbfa023e43",
-      measurementId: "G-3LRGF5R73H"
+      appId: "1:161384067066:web:b072e1e473bdd469023e43",
+      measurementId: "G-YMHLWEP3H6"
     };
 
     const { initializeApp } = await import("https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js");
