fix: Remove taiwanstock.online from Chinese page and add cleanup script

--- a/public/index.zh.html
+++ b/public/index.zh.html
@@ -8,7 +8,7 @@
         <div class="product-info">
           <span class="product-meta">尋找投資人</span>
           <h3>Jeito</h3>
-          <p>新世代社群平台,重視隱私、真實與創作自由。無演算法壓力、無 AI 剝削,只有真誠的連結。</p>
+          <p>新世代社群平台,重視隱私、真實與創作自由。無演算法壓力、無 AI 剝削,有真誠的連結。</p>
         </div>
       </article>
       <!-- TokoCommic --> 結合科技與情感的軟體開發 | Stall POS 創作者收銀系統</title>
@@ -153,17 +153,6 @@
           <span class="product-meta">尋找投資人</span>
           <h3>Jeito</h3>
           <p>新世代社群平台，重視隱私、真實與創作自由。無演算法壓力、無 AI 剝削，只有真誠的連結。</p>
-        </div>
-      </article>
-      <!-- Taiwan Stock -->
-      <article class="product-card fade-in-section">
-        <div class="product-info">
-          <span class="product-meta">金融科技平台</span>
-          <h3>taiwanstock. online</h3>
-          <p>專為台灣資本市場打造的投資平台。整合儀表板、工具與內容，極簡深色介面，支援 Excel/PDF 匯出。</p>
-          <div class="product-links">
-            <a href="https://taiwanstock.online" target="_blank" class="btn-link">前往網站</a>
-          </div>
         </div>
       </article>
       <!-- TokoCommic -->
