pricing: Update What to Eat No-Ads plan from .99 to

--- a/public/apps/what-to-eat/index.html
+++ b/public/apps/what-to-eat/index.html
@@ -29,7 +29,7 @@
     "author": {"@type":"Organization","name":"ELLEZ LLC"},
     "offers": [
       {"@type":"Offer","price":"0","priceCurrency":"USD","name":"Free"},
-      {"@type":"Offer","name":"No-Ads","price":"5.99","priceCurrency":"USD"},
+      {"@type":"Offer","name":"No-Ads","price":"99","priceCurrency":"USD"},
       {"@type":"Offer","name":"Pro (Monthly)","price":"3.99","priceCurrency":"USD"},
       {"@type":"Offer","name":"Pro (Yearly)","price":"24.99","priceCurrency":"USD"}
     ],
@@ -232,7 +232,7 @@
 
           <div class="plan">
             <h3 class="plan-name">去廣告版</h3>
-            <div class="plan-price"><span class="currency">$</span>5<span style="font-size:20px">.99</span></div>
+            <div class="plan-price"><span class="currency">$</span>99</div>
             <p class="plan-period">一次性購買</p>
             <ul class="plan-features">
               <li>含 Free 全部功能</li><li>移除廣告</li><li>更流暢體驗</li><li>支持開發</li>
